Translate test-with-coverage.adoc.po

--- a/l10n/po/ja_JP/_guides/tests-with-coverage.adoc.po
+++ b/l10n/po/ja_JP/_guides/tests-with-coverage.adoc.po
@@ -7,24 +7,23 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2021-12-24 15:04+0000\n"
-"PO-Revision-Date: 2021-04-30 16:51+0900\n"
+"PO-Revision-Date: 2022-02-02 16:11+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.4.2\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
 #. https://github.com/quarkusio/quarkus/tree/main/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/tests-with-coverage.adoc:7
-#, fuzzy, no-wrap
-#| msgid "Measuring the coverage of your Unit Tests"
+#, no-wrap
 msgid "Measuring the coverage of your tests"
-msgstr "ユニットテストのカバレッジを測定する"
+msgstr "テストのカバレッジの測定"
 
 #. type: Plain text
 #: upstream/_guides/tests-with-coverage.adoc:23
@@ -79,10 +78,8 @@ msgstr "IDE"
 
 #. type: Plain text
 #: upstream/_guides/tests-with-coverage.adoc:38
-#, fuzzy
-#| msgid "JDK 1.8+ installed with JAVA_HOME configured appropriately"
 msgid "JDK 11+ installed with JAVA_HOME configured appropriately"
-msgstr "JAVA_HOMEが適切に設定されたJDK 1.8+がインストールされていること"
+msgstr "JDK 11+ がインストールされ、 `JAVA_HOME`  が適切に設定されていること"
 
 #. type: Plain text
 #: upstream/_guides/tests-with-coverage.adoc:39
@@ -91,10 +88,8 @@ msgstr "Apache Maven {maven-version}"
 
 #. type: Plain text
 #: upstream/_guides/tests-with-coverage.adoc:40
-#, fuzzy
-#| msgid "Having completed the link:getting-started-testing[Testing your application guide]"
 msgid "Having completed the xref:getting-started-testing.adoc[Testing your application guide]"
-msgstr "link:https://quarkus.io/guides/getting-started-testing[アプリケーションガイドのテスト] が完了済であること"
+msgstr "link:https://quarkus.io/guides/getting-started-testing[アプリケーションのテストガイド] が完了済であること"
 
 #. type: Title ==
 #: upstream/_guides/tests-with-coverage.adoc:41
@@ -355,9 +350,8 @@ msgstr ""
 #: upstream/_guides/tests-with-coverage.adoc:177
 #: upstream/_guides/tests-with-coverage.adoc:250
 #: upstream/_guides/tests-with-coverage.adoc:407
-#, fuzzy
 msgid "If you are using Gradle, add this to your `build.gradle`:"
-msgstr "Gradleを使用している場合は、 `build.gradle` にこれを追加します。"
+msgstr "Gradleを使用している場合は、 `build.gradle` に以下を追加します。"
 
 #. type: delimited block -
 #: upstream/_guides/tests-with-coverage.adoc:181
@@ -489,58 +483,49 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/tests-with-coverage.adoc:267
-#, fuzzy
 msgid "Add the `jacoco` gradle plugin"
 msgstr "`jacoco` gradleプラグインの追加"
 
 #. type: Plain text
 #: upstream/_guides/tests-with-coverage.adoc:269
-#, fuzzy
 msgid "Set this config to `false` if you are also using the `quarkus-jacoco` extension and have at least one `@QuarkusTest`.  The default `jacocoTestReport` task can be skipped since `quarkus-jacoco` will generate the combined report of regular unit tests and `@QuarkusTest` classes since the execution data is recorded in the same file."
-msgstr "`quarkus-jacoco` 拡張機能も使用していて、少なくとも 1 つの `@QuarkusTest` がある場合は、このコンフィグを `false` に設定します。デフォルトの `jacocoTestReport` タスクは省略できます。なぜなら `quarkus-jacoco` は通常のユニットテストと `@QuarkusTest` クラスの実行データが同じファイルに記録されているため、それらを組み合わせたレポートを生成するからです。"
+msgstr "`quarkus-jacoco` エクステンションも使用していて、少なくとも 1 つの `@QuarkusTest` がある場合は、このコンフィグを `false` に設定します。デフォルトの `jacocoTestReport` タスクは省略できます。なぜなら `quarkus-jacoco` は通常のユニットテストと `@QuarkusTest` クラスの実行データが同じファイルに記録されているため、それらを組み合わせたレポートを生成するからです。"
 
 #. type: Title ===
 #: upstream/_guides/tests-with-coverage.adoc:270
-#, fuzzy, no-wrap
-#| msgid "Measuring the coverage of your Integration Tests"
+#, no-wrap
 msgid "Coverage for Integration Tests"
-msgstr "統合テストのカバレッジを測定する"
+msgstr "結合テストのカバレッジ"
 
 #. type: Plain text
 #: upstream/_guides/tests-with-coverage.adoc:273
-#, fuzzy
 msgid "To get code coverage data from integration tests, the following need to be requirements need to be met:"
-msgstr "統合テストからコードカバレッジデータを取得するには、Jacocoの設定が必要で、 `@QuarkusIntegrationTest` のクラスがjarパッケージを使って実行されなければなりません。"
+msgstr "結合テストからコードカバレッジデータを取得するには、次の要件が満たされる必要があります:"
 
 #. type: Plain text
 #: upstream/_guides/tests-with-coverage.adoc:275
-#, fuzzy
 msgid "The built artifact is a jar (and not a container or native binary)."
-msgstr "ビルドされたアーティファクトはjar（コンテナやネイティブバイナリではありません）です。"
+msgstr "ビルドされたアーティファクトがjarであること（コンテナやネイティブバイナリではないこと）。"
 
 #. type: Plain text
 #: upstream/_guides/tests-with-coverage.adoc:276
-#, fuzzy
 msgid "Jacoco needs to be configured in your build tool."
-msgstr "Jacocoはビルドツールで設定する必要があります。"
+msgstr "Jacocoがビルドツールで設定されていること。"
 
 #. type: Plain text
 #: upstream/_guides/tests-with-coverage.adoc:277
-#, fuzzy
 msgid "The application must have been built with `quarkus.package.write-transformed-bytecode-to-build-output` set to `true`"
-msgstr "アプリケーションは、 `quarkus.package.write-transformed-bytecode-to-build-output` に設定してビルドされている必要があります。 `true`"
+msgstr "アプリケーションは、 `quarkus.package.write-transformed-bytecode-to-build-output` が `true` に設定してビルドされていること"
 
 #. type: Plain text
 #: upstream/_guides/tests-with-coverage.adoc:279
-#, fuzzy
 msgid "Setting `quarkus.package.write-transformed-bytecode-to-build-output=true` should be done with a caution and only if subsequent builds are done in a clean environment - i.e. the build tool's output directory has been completely cleaned."
-msgstr "`quarkus.package.write-transformed-bytecode-to-build-output=true` の設定は、慎重に行う必要があります。また、後続のビルドがクリーンな環境で行われる場合のみ、つまりビルドツールの出力ディレクトリが完全にクリーンな状態で行われる場合のみ、設定を行う必要があります。"
+msgstr "`quarkus.package.write-transformed-bytecode-to-build-output=true` の設定は、後続のビルドがクリーンな環境で行われる場合のみ、つまりビルドツールの出力ディレクトリが完全にクリーンな状態で行われる場合のみ、慎重に設定を行う必要があります。"
 
 #. type: Plain text
 #: upstream/_guides/tests-with-coverage.adoc:282
-#, fuzzy
 msgid "In the `pom.xml`, you can add the following plugin configuration for Jacoco. This will append integration test data into the same destination file as unit tests, re-build the jacoco report after the integration tests are complete, and thus produce a comprehensive code-coverage report."
-msgstr "`pom.xml` で、Jacocoのプラグイン設定を以下のように追加します。これにより、統合テストのデータをユニットテストと同じ保存先のファイルに追加し、統合テストが完了した後にjacocoレポートを再構築することで、包括的なコードカバレッジレポートを作成します。"
+msgstr "`pom.xml` で、Jacocoのプラグイン設定を以下のように追加します。これにより、結合テストのデータをユニットテストと同じ保存先のファイルに追加し、結合テストが完了した後にjacocoレポートを再構築することで、包括的なコードカバレッジレポートを作成します。"
 
 #. type: delimited block -
 #: upstream/_guides/tests-with-coverage.adoc:319
@@ -585,9 +570,8 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/tests-with-coverage.adoc:322
-#, fuzzy
 msgid "In order to run the integration tests as a jar with the Jacoco agent, add the following to your `pom.xml`."
-msgstr "統合テストをJacocoエージェントのjarとして実行するためには、 `pom.xml` に以下を追加します。"
+msgstr "結合テストをjarとしてJacocoエージェントと共に実行するためには、 `pom.xml` に以下を追加します。"
 
 #. type: delimited block -
 #: upstream/_guides/tests-with-coverage.adoc:351
@@ -624,21 +608,19 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/tests-with-coverage.adoc:355
-#, fuzzy
 msgid "Sharing the same value for `quarkus.test.arg-line` might break integration test runs that test different types of Quarkus artifacts. In such cases, the use of maven profiles is advised."
-msgstr "`quarkus.test.arg-line` で同じ値を共有すると、異なるタイプのQuarkusアーティファクトをテストする統合テストが壊れる可能性があります。このような場合には、mavenプロファイルの使用をお勧めします。"
+msgstr "`quarkus.test.arg-line` で同じ値を共有すると、異なるタイプのQuarkusアーティファクトをテストする結合テストが壊れる可能性があります。このような場合には、mavenプロファイルの使用をお勧めします。"
 
 #. type: Title ==
 #: upstream/_guides/tests-with-coverage.adoc:356
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Setting coverage thresholds for the Maven build"
 msgstr "Mavenのビルドにカバレッジのしきい値を設定する"
 
 #. type: Plain text
 #: upstream/_guides/tests-with-coverage.adoc:359
-#, fuzzy
 msgid "You can set thresholds for code coverage using the Jacoco Maven plugin. Note the element `<dataFile>${project.build.directory}/jacoco-quarkus.exec</dataFile>`. You must set it matching your choice for `quarkus.jacoco.data-file`."
-msgstr "コードカバレッジのしきい値は、Jacoco Mavenプラグインを使って設定することができます。 `&amp;lt;dataFile&amp;gt;${project.build.directory}/jacoco-quarkus.exec&amp;lt;/dataFile&amp;gt;` という要素に注目してください。 `quarkus.jacoco.data-file` の選択に合わせて設定する必要があります。"
+msgstr "コードカバレッジのしきい値は、Jacoco Mavenプラグインを使って設定することができます。 `<dataFile>${project.build.directory}/jacoco-quarkus.exec</dataFile>` という要素に注意してください。 `quarkus.jacoco.data-file` の選択に合わせて設定する必要があります。"
 
 #. type: delimited block -
 #: upstream/_guides/tests-with-coverage.adoc:404
@@ -714,7 +696,6 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/tests-with-coverage.adoc:431
-#, fuzzy
 msgid "Excluding classes from the verification task can be configured as following:"
 msgstr "検証タスクからクラスを除外するには、以下のように設定します。"
 
@@ -735,19 +716,16 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/tests-with-coverage.adoc:445
-#, fuzzy
 msgid "`classDirectories` needs to be read after evaluation phase in Gradle"
 msgstr "`classDirectories` は、Gradle の評価フェーズの後に読み込まれる必要があります。"
 
 #. type: Plain text
 #: upstream/_guides/tests-with-coverage.adoc:446
-#, fuzzy
 msgid "Currently, there is a bug in Gradle JaCoCo which requires the `excludes` to be specified in this manner - https://github.com/gradle/gradle/issues/14760.  Once this issue is fixed, excludes"
 msgstr "現在、Gradle JaCoCoには、 `excludes` をこのように指定しなければならないというバグがあります https://github.com/gradle/gradle/issues/14760 。この問題が修正されれば、excludes"
 
 #. type: Plain text
 #: upstream/_guides/tests-with-coverage.adoc:447
-#, fuzzy
 msgid "Exclude all classes in `org/example/package` package"
 msgstr "`org/example/package` パッケージのすべてのクラスを除外します。"
 
