Update .po files

--- a/l10n/po/ja_JP/_data/guides-latest.yaml.po
+++ b/l10n/po/ja_JP/_data/guides-latest.yaml.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2022-01-07 11:12+0000\n"
+"POT-Creation-Date: 2022-02-02 15:15+0000\n"
 "PO-Revision-Date: 2022-01-20 23:51+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -1007,6 +1007,26 @@ msgstr "/guides/reactive-sql-clients"
 #. type: Hash Value - Key: description
 #: >categories>>guides>
 #, no-wrap
+msgid "Reactive API for Hibernate ORM"
+msgstr ""
+
+#. type: Hash Value - Key: title
+#: >categories>>guides>
+#, fuzzy, no-wrap
+#| msgid "Using Hibernate ORM and JPA"
+msgid "Using Hibernate Reactive"
+msgstr "Hibernate ORMとJPAの使用"
+
+#. type: Hash Value - Key: url
+#: >categories>>guides>
+#, fuzzy, no-wrap
+#| msgid "/guides/hibernate-reactive-panache"
+msgid "/guides/hibernate-reactive"
+msgstr "/guides/hibernate-reactive-panache"
+
+#. type: Hash Value - Key: description
+#: >categories>>guides>
+#, no-wrap
 msgid "Simplified reactive ORM layer based on Hibernate Reactive."
 msgstr "Hibernate ReactiveをベースにしたシンプルなリアクティブORMレイヤー。"
 
@@ -1243,6 +1263,111 @@ msgstr "Amazon S3"
 #, no-wrap
 msgid "https://quarkiverse.github.io/quarkiverse-docs/quarkus-amazon-services/dev/amazon-s3.html"
 msgstr "https://quarkiverse.github.io/quarkiverse-docs/quarkus-amazon-services/dev/amazon-s3.html"
+
+#. type: Hash Value - Key: description
+#: >categories>>guides>
+#, fuzzy, no-wrap
+#| msgid "This guide covers how to use MongoDB in Quarkus."
+msgid "This guide covers how to use GCP BigQuery in Quarkus."
+msgstr "このガイドでは、QuarkusでMongoDBを使用する方法について説明します。"
+
+#. type: Hash Value - Key: title
+#: >categories>>guides>
+#, fuzzy, no-wrap
+#| msgid "Google Cloud Functions"
+msgid "Google Cloud BigQuery"
+msgstr "Google Cloud Functions"
+
+#. type: Hash Value - Key: url
+#: >categories>>guides>
+#, fuzzy, no-wrap
+#| msgid "https://quarkiverse.github.io/quarkiverse-docs/quarkus-neo4j/dev/index.html"
+msgid "https://quarkiverse.github.io/quarkiverse-docs/quarkus-google-cloud-services/main/bigquery.html"
+msgstr "https://quarkiverse.github.io/quarkiverse-docs/quarkus-neo4j/dev/index.html"
+
+#. type: Hash Value - Key: description
+#: >categories>>guides>
+#, fuzzy, no-wrap
+#| msgid "This guide covers how to use MongoDB in Quarkus."
+msgid "This guide covers how to use GCP Bigtable in Quarkus."
+msgstr "このガイドでは、QuarkusでMongoDBを使用する方法について説明します。"
+
+#. type: Hash Value - Key: title
+#: >categories>>guides>
+#, fuzzy, no-wrap
+#| msgid "Google Cloud Functions"
+msgid "Google Cloud Bigtable"
+msgstr "Google Cloud Functions"
+
+#. type: Hash Value - Key: url
+#: >categories>>guides>
+#, fuzzy, no-wrap
+#| msgid "https://quarkiverse.github.io/quarkiverse-docs/quarkus-amazon-services/dev/amazon-iam.html"
+msgid "https://quarkiverse.github.io/quarkiverse-docs/quarkus-google-cloud-services/main/bigtable.html"
+msgstr "https://quarkiverse.github.io/quarkiverse-docs/quarkus-amazon-services/dev/amazon-iam.html"
+
+#. type: Hash Value - Key: description
+#: >categories>>guides>
+#, fuzzy, no-wrap
+#| msgid "This guide covers how to use a Redis datastore in Quarkus."
+msgid "This guide covers how to use GCP Firestore in Quarkus."
+msgstr "このガイドでは、QuarkusでRedisデータストアを使用する方法について説明します。"
+
+#. type: Hash Value - Key: title
+#: >categories>>guides>
+#, fuzzy, no-wrap
+#| msgid "Google Cloud Functions"
+msgid "Google Cloud Firestore"
+msgstr "Google Cloud Functions"
+
+#. type: Hash Value - Key: url
+#: >categories>>guides>
+#, fuzzy, no-wrap
+#| msgid "https://quarkiverse.github.io/quarkiverse-docs/quarkus-amazon-services/dev/amazon-ses.html"
+msgid "https://quarkiverse.github.io/quarkiverse-docs/quarkus-google-cloud-services/main/firestore.html"
+msgstr "https://quarkiverse.github.io/quarkiverse-docs/quarkus-amazon-services/dev/amazon-ses.html"
+
+#. type: Hash Value - Key: description
+#: >categories>>guides>
+#, fuzzy, no-wrap
+#| msgid "This guide covers how to use MongoDB in Quarkus."
+msgid "This guide covers how to use GCP Spanner in Quarkus."
+msgstr "このガイドでは、QuarkusでMongoDBを使用する方法について説明します。"
+
+#. type: Hash Value - Key: title
+#: >categories>>guides>
+#, fuzzy, no-wrap
+#| msgid "Google Cloud Functions"
+msgid "Google Cloud Spanner"
+msgstr "Google Cloud Functions"
+
+#. type: Hash Value - Key: url
+#: >categories>>guides>
+#, fuzzy, no-wrap
+#| msgid "https://quarkiverse.github.io/quarkiverse-docs/quarkus-amazon-services/dev/amazon-ses.html"
+msgid "https://quarkiverse.github.io/quarkiverse-docs/quarkus-google-cloud-services/main/spanner.html"
+msgstr "https://quarkiverse.github.io/quarkiverse-docs/quarkus-amazon-services/dev/amazon-ses.html"
+
+#. type: Hash Value - Key: description
+#: >categories>>guides>
+#, fuzzy, no-wrap
+#| msgid "This guide covers how to use MongoDB in Quarkus."
+msgid "This guide covers how to use GCP Storage in Quarkus."
+msgstr "このガイドでは、QuarkusでMongoDBを使用する方法について説明します。"
+
+#. type: Hash Value - Key: title
+#: >categories>>guides>
+#, fuzzy, no-wrap
+#| msgid "Google Cloud Functions"
+msgid "Google Cloud Storage"
+msgstr "Google Cloud Functions"
+
+#. type: Hash Value - Key: url
+#: >categories>>guides>
+#, fuzzy, no-wrap
+#| msgid "https://quarkiverse.github.io/quarkiverse-docs/quarkus-amazon-services/dev/amazon-ses.html"
+msgid "https://quarkiverse.github.io/quarkiverse-docs/quarkus-google-cloud-services/main/storage.html"
+msgstr "https://quarkiverse.github.io/quarkiverse-docs/quarkus-amazon-services/dev/amazon-ses.html"
 
 #. type: Hash Value - Key: description
 #: >categories>>guides>
@@ -1581,6 +1706,27 @@ msgstr "JMSの使用"
 #, no-wrap
 msgid "/guides/jms"
 msgstr "/guides/jms"
+
+#. type: Hash Value - Key: description
+#: >categories>>guides>
+#, fuzzy, no-wrap
+#| msgid "This guide covers how to use MongoDB in Quarkus."
+msgid "This guide covers how to use GCP PubSub in Quarkus."
+msgstr "このガイドでは、QuarkusでMongoDBを使用する方法について説明します。"
+
+#. type: Hash Value - Key: title
+#: >categories>>guides>
+#, fuzzy, no-wrap
+#| msgid "Google Cloud Functions"
+msgid "Google Cloud PubSub"
+msgstr "Google Cloud Functions"
+
+#. type: Hash Value - Key: url
+#: >categories>>guides>
+#, fuzzy, no-wrap
+#| msgid "https://quarkiverse.github.io/quarkiverse-docs/quarkus-amazon-services/dev/amazon-s3.html"
+msgid "https://quarkiverse.github.io/quarkiverse-docs/quarkus-google-cloud-services/main/pubsub.html"
+msgstr "https://quarkiverse.github.io/quarkiverse-docs/quarkus-amazon-services/dev/amazon-s3.html"
 
 #. type: Hash Value - Key: keywords
 #: >categories> >categories>>guides>
@@ -2734,6 +2880,27 @@ msgstr "Amazon SSM"
 msgid "https://quarkiverse.github.io/quarkiverse-docs/quarkus-amazon-services/dev/amazon-ssm.html"
 msgstr "https://quarkiverse.github.io/quarkiverse-docs/quarkus-amazon-services/dev/amazon-ssm.html"
 
+#. type: Hash Value - Key: description
+#: >categories>>guides>
+#, fuzzy, no-wrap
+#| msgid "This guide covers how to use the Amazon Simple Email Service in Quarkus."
+msgid "This guide covers how to use multiple GCP services."
+msgstr "このガイドでは、QuarkusでAmazon Simple Mail Serviceの使用方法について説明します。"
+
+#. type: Hash Value - Key: title
+#: >categories>>guides>
+#, fuzzy, no-wrap
+#| msgid "Google Cloud Functions"
+msgid "Access Google Cloud services"
+msgstr "Google Cloud Functions"
+
+#. type: Hash Value - Key: url
+#: >categories>>guides>
+#, fuzzy, no-wrap
+#| msgid "https://quarkiverse.github.io/quarkiverse-docs/quarkus-neo4j/dev/index.html"
+msgid "https://quarkiverse.github.io/quarkiverse-docs/quarkus-google-cloud-services/main/index.html"
+msgstr "https://quarkiverse.github.io/quarkiverse-docs/quarkus-neo4j/dev/index.html"
+
 #. type: Hash Value - Key: cat-id
 #: >categories>
 #, no-wrap
@@ -3543,6 +3710,26 @@ msgstr "パフォーマンスの測定"
 #, no-wrap
 msgid "/guides/performance-measure"
 msgstr "/guides/performance-measure"
+
+#. type: Hash Value - Key: description
+#: >categories>>guides>
+#, no-wrap
+msgid "This guide covers how to use GCP Secret Manager in Quarkus to consume configuration properties directly or via your `application.properties`."
+msgstr ""
+
+#. type: Hash Value - Key: title
+#: >categories>>guides>
+#, fuzzy, no-wrap
+#| msgid "Consume Configuration from Consul"
+msgid "Consume Configuration from Google Cloud Secret Manager"
+msgstr "Consulから設定を消費する"
+
+#. type: Hash Value - Key: url
+#: >categories>>guides>
+#, fuzzy, no-wrap
+#| msgid "https://quarkiverse.github.io/quarkiverse-docs/quarkus-amazon-services/dev/amazon-iam.html"
+msgid "https://quarkiverse.github.io/quarkiverse-docs/quarkus-google-cloud-services/main/secretmanager.html"
+msgstr "https://quarkiverse.github.io/quarkiverse-docs/quarkus-amazon-services/dev/amazon-iam.html"
 
 #. type: Hash Value - Key: cat-id
 #: >categories>
