--- a/l10n/po/ja_JP/_guides/funqy-gcp-functions-http.adoc.po
+++ b/l10n/po/ja_JP/_guides/funqy-gcp-functions-http.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-12-22 15:04+0000\n"
+"POT-Creation-Date: 2022-02-02 15:06+0000\n"
 "PO-Revision-Date: 2021-11-22 22:00+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -91,18 +91,33 @@ msgstr "はじめに"
 msgid "The steps to get this quickstart running are exactly the same as defined in the xref:gcp-functions-http.adoc[Google Cloud Functions HTTP Guide].  This differences are that you are running from a quickstart and the Maven dependencies are slightly different."
 msgstr "このクイックスタートを実行するための手順は、link:gcp-functions-http[Google Cloud Functions HTTP Guide] で定義されているものと全く同じです。この違いは、クイックスタートから実行していることと、Maven の依存関係が若干異なることです。"
 
-#. type: delimited block -
-#: upstream/_guides/funqy-gcp-functions-http.adoc:55
+#. type: Block title
+#: upstream/_guides/funqy-gcp-functions-http.adoc:46
 #, no-wrap
+msgid "pom.xml"
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_guides/funqy-gcp-functions-http.adoc:56
+#, fuzzy, no-wrap
+#| msgid ""
+#| "        <dependency>\n"
+#| "            <groupId>io.quarkus</groupId>\n"
+#| "            <artifactId>quarkus-funqy-http</artifactId>\n"
+#| "        </dependency>\n"
+#| "        <dependency>\n"
+#| "            <groupId>io.quarkus</groupId>\n"
+#| "            <artifactId>quarkus-google-cloud-functions-http</artifactId>\n"
+#| "        </dependency>\n"
 msgid ""
-"        <dependency>\n"
-"            <groupId>io.quarkus</groupId>\n"
-"            <artifactId>quarkus-funqy-http</artifactId>\n"
-"        </dependency>\n"
-"        <dependency>\n"
-"            <groupId>io.quarkus</groupId>\n"
-"            <artifactId>quarkus-google-cloud-functions-http</artifactId>\n"
-"        </dependency>\n"
+"<dependency>\n"
+"    <groupId>io.quarkus</groupId>\n"
+"    <artifactId>quarkus-funqy-http</artifactId>\n"
+"</dependency>\n"
+"<dependency>\n"
+"    <groupId>io.quarkus</groupId>\n"
+"    <artifactId>quarkus-google-cloud-functions-http</artifactId>\n"
+"</dependency>\n"
 msgstr ""
 "        <dependency>\n"
 "            <groupId>io.quarkus</groupId>\n"
@@ -112,3 +127,17 @@ msgstr ""
 "            <groupId>io.quarkus</groupId>\n"
 "            <artifactId>quarkus-google-cloud-functions-http</artifactId>\n"
 "        </dependency>\n"
+
+#. type: Block title
+#: upstream/_guides/funqy-gcp-functions-http.adoc:59
+#, no-wrap
+msgid "build.gradle"
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_guides/funqy-gcp-functions-http.adoc:63
+#, no-wrap
+msgid ""
+"implementation(\"io.quarkus:quarkus-funqy-http\")\n"
+"implementation(\"io.quarkus:quarkus-google-cloud-functions-http\")\n"
+msgstr ""
