--- a/l10n/po/ja_JP/_guides/funqy-amazon-lambda-http.adoc.po
+++ b/l10n/po/ja_JP/_guides/funqy-amazon-lambda-http.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-12-22 15:04+0000\n"
+"POT-Creation-Date: 2022-02-02 15:06+0000\n"
 "PO-Revision-Date: 2021-11-22 22:04+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -91,16 +91,36 @@ msgstr "はじめに"
 msgid "The steps to get this quickstart running are exactly the same as defined in the xref:amazon-lambda-http.adoc[Amazon Lambda HTTP Guide].  This differences are that you are running from a quickstart and the maven dependencies are slightly different."
 msgstr "このクイックスタートを実行するための手順は、 link:amazon-lambda-http[Amazon Lambda HTTP Guide] で定義されているものと全く同じです。この違いは、クイックスタートから実行していることと、mavenの依存関係が若干異なることです。"
 
+#. type: Block title
+#: upstream/_guides/funqy-amazon-lambda-http.adoc:46
+#, no-wrap
+msgid "pom.xml"
+msgstr ""
+
 #. type: delimited block -
-#: upstream/_guides/funqy-amazon-lambda-http.adoc:55
+#: upstream/_guides/funqy-amazon-lambda-http.adoc:56
 #, no-wrap
 msgid ""
-"        <dependency>\n"
-"            <groupId>io.quarkus</groupId>\n"
-"            <artifactId>quarkus-funqy-http</artifactId>\n"
-"        </dependency>\n"
-"        <dependency>\n"
-"            <groupId>io.quarkus</groupId>\n"
-"            <artifactId>quarkus-amazon-lambda-http</artifactId>\n"
-"        </dependency>\n"
+"<dependency>\n"
+"    <groupId>io.quarkus</groupId>\n"
+"    <artifactId>quarkus-funqy-http</artifactId>\n"
+"</dependency>\n"
+"<dependency>\n"
+"    <groupId>io.quarkus</groupId>\n"
+"    <artifactId>quarkus-amazon-lambda-http</artifactId>\n"
+"</dependency>\n"
+msgstr ""
+
+#. type: Block title
+#: upstream/_guides/funqy-amazon-lambda-http.adoc:59
+#, no-wrap
+msgid "build.gradle"
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_guides/funqy-amazon-lambda-http.adoc:63
+#, no-wrap
+msgid ""
+"implementation(\"io.quarkus:quarkus-funqy-http\")\n"
+"implementation(\"io.quarkus:quarkus-amazon-lambda-http\")\n"
 msgstr ""
