--- a/l10n/po/ja_JP/_posts/2022-02-02-quarkus-2-7-0-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2022-02-02-quarkus-2-7-0-final-released.adoc.po
@@ -89,7 +89,7 @@ msgstr ""
 #: upstream/_posts/2022-02-02-quarkus-2-7-0-final-released.adoc:25
 #, no-wrap
 msgid "Migration Guide"
-msgstr ""
+msgstr "移行ガイド"
 
 #. type: Plain text
 #: upstream/_posts/2022-02-02-quarkus-2-7-0-final-released.adoc:28
@@ -100,13 +100,13 @@ msgstr ""
 #: upstream/_posts/2022-02-02-quarkus-2-7-0-final-released.adoc:29
 #, no-wrap
 msgid "What's new?"
-msgstr ""
+msgstr "変更点"
 
 #. type: Title ===
 #: upstream/_posts/2022-02-02-quarkus-2-7-0-final-released.adoc:31
 #, no-wrap
 msgid "Quarkus CLI"
-msgstr ""
+msgstr "Quarkus CLI"
 
 #. type: Plain text
 #: upstream/_posts/2022-02-02-quarkus-2-7-0-final-released.adoc:34
@@ -205,7 +205,7 @@ msgstr ""
 #: upstream/_posts/2022-02-02-quarkus-2-7-0-final-released.adoc:71
 #, no-wrap
 msgid "OpenId Connect"
-msgstr ""
+msgstr "OpenId Connect"
 
 #. type: Plain text
 #: upstream/_posts/2022-02-02-quarkus-2-7-0-final-released.adoc:75
@@ -216,7 +216,7 @@ msgstr ""
 #: upstream/_posts/2022-02-02-quarkus-2-7-0-final-released.adoc:76
 #, no-wrap
 msgid "Hibernate ORM"
-msgstr ""
+msgstr "Hibernate ORM"
 
 #. type: Plain text
 #: upstream/_posts/2022-02-02-quarkus-2-7-0-final-released.adoc:79
@@ -258,7 +258,7 @@ msgstr ""
 #: upstream/_posts/2022-02-02-quarkus-2-7-0-final-released.adoc:89
 #, no-wrap
 msgid "MongoDB"
-msgstr ""
+msgstr "MongoDB"
 
 #. type: Plain text
 #: upstream/_posts/2022-02-02-quarkus-2-7-0-final-released.adoc:92
@@ -302,7 +302,7 @@ msgstr ""
 #: upstream/_posts/2022-02-02-quarkus-2-7-0-final-released.adoc:106
 #, no-wrap
 msgid "Cache"
-msgstr ""
+msgstr "Cache"
 
 #. type: Plain text
 #: upstream/_posts/2022-02-02-quarkus-2-7-0-final-released.adoc:109
@@ -340,7 +340,7 @@ msgstr ""
 #: upstream/_posts/2022-02-02-quarkus-2-7-0-final-released.adoc:119
 #, no-wrap
 msgid "Contributors"
-msgstr ""
+msgstr "コントリビューター"
 
 #. type: Plain text
 #: upstream/_posts/2022-02-02-quarkus-2-7-0-final-released.adoc:123
@@ -356,34 +356,34 @@ msgstr ""
 #: upstream/_posts/2022-02-02-quarkus-2-7-0-final-released.adoc:126
 #, no-wrap
 msgid "Come Join Us"
-msgstr ""
+msgstr "参加のお誘い"
 
 #. type: Plain text
 #: upstream/_posts/2022-02-02-quarkus-2-7-0-final-released.adoc:129
 msgid "We value your feedback a lot so please report bugs, ask for improvements... Let's build something great together!"
-msgstr ""
+msgstr "私達は皆様からのフィードバックに重きを置いています。バグ報告、改善要望を是非お願いします。一緒に素晴らしいものを作り上げていきましょう!"
 
 #. type: Plain text
 #: upstream/_posts/2022-02-02-quarkus-2-7-0-final-released.adoc:131
 msgid "If you are a Quarkus user or just curious, don't be shy and join our welcoming community:"
-msgstr ""
+msgstr "Quarkusユーザーの場合でも、単に興味を持っているだけの場合でも、恥ずかしがらずにコミュニティに参加して下さい!:"
 
 #. type: Plain text
 #: upstream/_posts/2022-02-02-quarkus-2-7-0-final-released.adoc:133
 msgid "provide feedback on https://github.com/quarkusio/quarkus/issues[GitHub];"
-msgstr ""
+msgstr "https://github.com/quarkusio/quarkus/issues[GitHub] でフィードバック"
 
 #. type: Plain text
 #: upstream/_posts/2022-02-02-quarkus-2-7-0-final-released.adoc:134
 msgid "craft some code and https://github.com/quarkusio/quarkus/pulls[push a PR];"
-msgstr ""
+msgstr "コードを作成し、 https://github.com/quarkusio/quarkus/pulls[プルリクエスト] を送信"
 
 #. type: Plain text
 #: upstream/_posts/2022-02-02-quarkus-2-7-0-final-released.adoc:135
 msgid "discuss with us on https://quarkusio.zulipchat.com/[Zulip] and on the https://groups.google.com/d/forum/quarkus-dev[mailing list];"
-msgstr ""
+msgstr "https://quarkusio.zulipchat.com/[Zulip] や https://groups.google.com/d/forum/quarkus-dev[メーリングリスト] でディスカッションに参加"
 
 #. type: Plain text
 #: upstream/_posts/2022-02-02-quarkus-2-7-0-final-released.adoc:135
 msgid "ask your questions on https://stackoverflow.com/questions/tagged/quarkus[Stack Overflow]."
-msgstr ""
+msgstr "https://stackoverflow.com/questions/tagged/quarkus[Stack Overflow] で質問"
