Add some translations

--- a/l10n/po/ja_JP/_guides/command-mode-reference.adoc.po
+++ b/l10n/po/ja_JP/_guides/command-mode-reference.adoc.po
@@ -7,14 +7,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2022-01-20 16:09+0000\n"
-"PO-Revision-Date: 2021-11-26 12:37+0900\n"
+"PO-Revision-Date: 2022-02-02 21:35+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 3.0\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
@@ -117,27 +117,22 @@ msgstr "コンテキスト"
 
 #. type: Block title
 #: upstream/_guides/command-mode-reference.adoc:54
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Got a `ContextNotActiveException`?"
-msgstr "Got a `ContextNotActiveException`?"
+msgstr "`ContextNotActiveException`が発生しましたか?"
 
 #. type: Plain text
 #: upstream/_guides/command-mode-reference.adoc:59
-#, fuzzy
 msgid "A command mode application (like a CLI) is a bit different from say a HTTP service, there is a single call from the command line.  So the notion of _request_ let alone multiple requests does not exist per se.  Therefore request scope is not the default."
 msgstr "コマンドモードのアプリケーション（CLIなど）は、例えばHTTPサービスとは少し異なり、コマンドラインからの呼び出しは1回だけです。そのため、複数のリクエストはおろか、 _リクエスト_という概念自体が存在しません。したがって、リクエストスコープはデフォルトではありません。"
 
 #. type: Plain text
 #: upstream/_guides/command-mode-reference.adoc:62
-#, fuzzy
-#| msgid "To get access to your application beans and services, be aware that a `@QuarkusMain` instance is an application scoped bean by default. It has access to singletons, application and dependent scoped beans. If you want to interact with beans that requires a request scope put a `@ActivateRequestContext` on your `run()` method."
 msgid "To get access to your application beans and services, be aware that a `@QuarkusMain` instance is an application scoped bean by default.  It has access to singletons, application and dependent scoped beans."
 msgstr "アプリケーションBeanやサービスにアクセスするために、 `@QuarkusMain` インスタンスはデフォルトでapplicationスコープのBeanであることに注意してください。singleton、application、dependentスコープのBeanへのアクセスを持っています。requestスコープを必要とするBeanと対話したい場合は、 `run()` メソッドに `@ActivateRequestContext` を記述してください。"
 
 #. type: Plain text
 #: upstream/_guides/command-mode-reference.adoc:66
-#, fuzzy
-#| msgid "This let `run()` have access to methods like `listAll()` and `query*` methods on a Panache Entity. Without it you will eventually get a `ContextNotActiveException` when accessing such classes/beans."
 msgid "If you want to interact with beans that requires a request scope, simply add the `@ActivateRequestContext` annotation on your `run()` method.  This let `run()` have access to methods like `listAll()` and `query*` methods on a Panache Entity.  Without it you will eventually get a `ContextNotActiveException` when accessing such classes/beans."
 msgstr "これにより、 `run()` は Panache Entity 上の `listAll()` や `query*` のようなメソッドにアクセスできるようになります。これがないと、そのようなクラスやBeanにアクセスするときに、最終的には `ContextNotActiveException` に直面することになります。"
 
