--- a/l10n/stats/translation.csv
+++ b/l10n/stats/translation.csv
@@ -26,7 +26,6 @@ l10n/po/ja_JP/_guides/platform-include.adoc.po, 0, 1, 0, 15 ,100%
 l10n/po/ja_JP/_guides/native-reference.adoc.po, 0, 292, 0, 7020 ,100%
 l10n/po/ja_JP/_guides/logging-sentry.adoc.po, 1, 26, 3, 349 ,100%
 l10n/po/ja_JP/_guides/liquibase-mongodb.adoc.po, 0, 42, 0, 481 ,100%
-l10n/po/ja_JP/_guides/jgit.adoc.po, 1, 11, 1, 130 ,100%
 l10n/po/ja_JP/_guides/infinispan-embedded.adoc.po, 0, 28, 0, 232 ,100%
 l10n/po/ja_JP/_guides/includes/extension-add.adoc.po, 0, 6, 0, 13 ,100%
 l10n/po/ja_JP/_guides/includes/devtools/prerequisites.adoc.po, 0, 11, 0, 79 ,100%
@@ -53,6 +52,8 @@ l10n/po/ja_JP/_guides/duration-format-note.adoc.po, 0, 2, 0, 70 ,100%
 l10n/po/ja_JP/_guides/credentials-provider.adoc.po, 2, 58, 2, 792 ,100%
 l10n/po/ja_JP/_guides/consul-config.adoc.po, 0, 48, 0, 685 ,100%
 l10n/po/ja_JP/_guides/conditional-extension-dependencies.adoc.po, 0, 41, 0, 811 ,100%
+l10n/po/ja_JP/_guides/command-mode-reference.adoc.po, 0, 57, 0, 1044 ,100%
+l10n/po/ja_JP/_guides/class-loading-reference.adoc.po, 0, 63, 0, 1457 ,100%
 l10n/po/ja_JP/_guides/camel.adoc.po, 0, 3, 0, 59 ,100%
 l10n/po/ja_JP/_guides/building-substrate-howto.adoc.po, 0, 24, 0, 260 ,100%
 l10n/po/ja_JP/_guides/apicurio-registry-dev-services.adoc.po, 0, 20, 0, 362 ,100%
@@ -94,7 +95,6 @@ l10n/po/ja_JP/_guides/mailer.adoc.po, 4, 71, 63, 908 ,94%
 l10n/po/ja_JP/_guides/logging.adoc.po, 10, 248, 165, 2491 ,94%
 l10n/po/ja_JP/_guides/elasticsearch.adoc.po, 8, 123, 143, 2149 ,94%
 l10n/po/ja_JP/_guides/deploying-to-azure-cloud.adoc.po, 4, 61, 55, 839 ,94%
-l10n/po/ja_JP/_guides/class-loading-reference.adoc.po, 6, 63, 89, 1457 ,94%
 l10n/po/ja_JP/_guides/websockets.adoc.po, 4, 69, 63, 848 ,93%
 l10n/po/ja_JP/_guides/smallrye-graphql.adoc.po, 15, 212, 192, 2576 ,93%
 l10n/po/ja_JP/_guides/redis.adoc.po, 8, 157, 138, 1744 ,93%
@@ -109,6 +109,7 @@ l10n/po/ja_JP/_guides/kubernetes-config.adoc.po, 4, 49, 81, 914 ,92%
 l10n/po/ja_JP/_guides/container-image.adoc.po, 4, 58, 93, 1063 ,92%
 l10n/po/ja_JP/_guides/smallrye-health.adoc.po, 7, 119, 186, 1886 ,91%
 l10n/po/ja_JP/_guides/continuous-testing.adoc.po, 6, 49, 84, 877 ,91%
+l10n/po/ja_JP/_guides/cli-tooling.adoc.po, 22, 35, 1, 11,91%
 l10n/po/ja_JP/_guides/smallrye-fault-tolerance.adoc.po, 11, 127, 225, 2199 ,90%
 l10n/po/ja_JP/_guides/scheduler-reference.adoc.po, 3, 98, 160, 1552 ,90%
 l10n/po/ja_JP/_guides/qute.adoc.po, 11, 126, 169, 1631 ,90%
@@ -122,7 +123,6 @@ l10n/po/ja_JP/_guides/reactive-event-bus.adoc.po, 9, 108, 172, 1370 ,88%
 l10n/po/ja_JP/_guides/performance-measure.adoc.po, 8, 89, 174, 1356 ,88%
 l10n/po/ja_JP/_guides/gradle-tooling.adoc.po, 16, 143, 310, 2483 ,88%
 l10n/po/ja_JP/_guides/config.adoc.po, 6, 84, 114, 917 ,88%
-l10n/po/ja_JP/_guides/command-mode-reference.adoc.po, 4, 57, 130, 1044 ,88%
 l10n/po/ja_JP/_guides/neo4j.adoc.po, 7, 142, 291, 2118 ,87%
 l10n/po/ja_JP/_guides/grpc-getting-started.adoc.po, 8, 96, 196, 1448 ,87%
 l10n/po/ja_JP/_guides/cdi.adoc.po, 8, 167, 339, 2496 ,87%
@@ -181,7 +181,6 @@ l10n/po/ja_JP/_guides/reactive-sql-clients.adoc.po, 101, 200, 1131, 2289 ,51%
 l10n/po/ja_JP/_guides/amazon-lambda-http.adoc.po, 58, 137, 1254, 2526 ,51%
 l10n/po/ja_JP/_guides/dev-mode-differences.adoc.po, 12, 45, 360, 707 ,50%
 l10n/po/ja_JP/_guides/amazon-sqs.adoc.po, 47, 107, 852, 1672 ,50%
-l10n/po/ja_JP/_guides/cli-tooling.adoc.po, 69, 111, 899, 1759 ,49%
 l10n/po/ja_JP/_guides/reactive-messaging-websocket.adoc.po, 52, 96, 580, 1095 ,48%
 l10n/po/ja_JP/_guides/cdi-integration.adoc.po, 69, 180, 1533, 2946 ,48%
 l10n/po/ja_JP/_guides/amazon-ssm.adoc.po, 40, 97, 672, 1284 ,48%
