Update translation stats

--- a/l10n/stats/translation.csv
+++ b/l10n/stats/translation.csv
@@ -26,6 +26,7 @@ l10n/po/ja_JP/_guides/platform-include.adoc.po, 0, 1, 0, 15 ,100%
 l10n/po/ja_JP/_guides/native-reference.adoc.po, 0, 292, 0, 7020 ,100%
 l10n/po/ja_JP/_guides/logging-sentry.adoc.po, 1, 26, 3, 349 ,100%
 l10n/po/ja_JP/_guides/liquibase-mongodb.adoc.po, 0, 42, 0, 481 ,100%
+l10n/po/ja_JP/_guides/jgit.adoc.po, 1, 11, 1, 130 ,100%
 l10n/po/ja_JP/_guides/infinispan-embedded.adoc.po, 0, 28, 0, 232 ,100%
 l10n/po/ja_JP/_guides/includes/extension-add.adoc.po, 0, 6, 0, 13 ,100%
 l10n/po/ja_JP/_guides/includes/devtools/prerequisites.adoc.po, 0, 11, 0, 79 ,100%
@@ -109,7 +110,6 @@ l10n/po/ja_JP/_guides/kubernetes-config.adoc.po, 4, 49, 81, 914 ,92%
 l10n/po/ja_JP/_guides/container-image.adoc.po, 4, 58, 93, 1063 ,92%
 l10n/po/ja_JP/_guides/smallrye-health.adoc.po, 7, 119, 186, 1886 ,91%
 l10n/po/ja_JP/_guides/continuous-testing.adoc.po, 6, 49, 84, 877 ,91%
-l10n/po/ja_JP/_guides/cli-tooling.adoc.po, 22, 35, 1, 11,91%
 l10n/po/ja_JP/_guides/smallrye-fault-tolerance.adoc.po, 11, 127, 225, 2199 ,90%
 l10n/po/ja_JP/_guides/scheduler-reference.adoc.po, 3, 98, 160, 1552 ,90%
 l10n/po/ja_JP/_guides/qute.adoc.po, 11, 126, 169, 1631 ,90%
@@ -161,6 +161,7 @@ l10n/po/ja_JP/_guides/infinispan-client.adoc.po, 51, 152, 854, 2361 ,64%
 l10n/po/ja_JP/_guides/quarkus-runtime-base-image.adoc.po, 11, 28, 133, 359 ,63%
 l10n/po/ja_JP/_guides/config-mappings.adoc.po, 41, 186, 748, 1999 ,63%
 l10n/po/ja_JP/_guides/funqy.adoc.po, 5, 40, 353, 893 ,61%
+l10n/po/ja_JP/_guides/cli-tooling.adoc.po, 50, 111, 690, 1759 ,61%
 l10n/po/ja_JP/_guides/grpc-service-implementation.adoc.po, 38, 96, 565, 1394 ,60%
 l10n/po/ja_JP/_guides/context-propagation.adoc.po, 51, 79, 504, 1254 ,60%
 l10n/po/ja_JP/_guides/grpc-service-consumption.adoc.po, 38, 107, 562, 1351 ,59%
