Add some translations

--- a/l10n/po/ja_JP/_guides/qute.adoc.po
+++ b/l10n/po/ja_JP/_guides/qute.adoc.po
@@ -7,14 +7,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2021-12-22 15:04+0000\n"
-"PO-Revision-Date: 2021-04-30 16:45+0900\n"
+"PO-Revision-Date: 2022-02-03 10:46+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.4.2\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
@@ -32,25 +32,22 @@ msgstr "Quteは、Quarkus のニーズを満たすために特別に設計され
 
 #. type: Title ==
 #: upstream/_guides/qute.adoc:17
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Solution"
 msgstr "ソリューション"
 
 #. type: Plain text
 #: upstream/_guides/qute.adoc:21
-#, fuzzy
 msgid "We recommend that you follow the instructions in the next sections and create the application step by step.  However, you can go right to the completed example."
 msgstr "次のセクションの指示に従って、段階的にアプリケーションを作成していくことをお勧めします。ただし、完成した例にすぐにアクセスすることもできます。"
 
 #. type: Plain text
 #: upstream/_guides/qute.adoc:23
-#, fuzzy
 msgid "Clone the Git repository: `git clone {quickstarts-clone-url}`, or download an {quickstarts-archive-url}[archive]."
-msgstr "Gitリポジトリをクローンする： `git clone {quickstarts-clone-url}` 、または{quickstarts-archive-url}[archive]をダウンロードする。"
+msgstr "Gitリポジトリをクローンする： `git clone {quickstarts-clone-url}` 、または {quickstarts-archive-url}[archive] をダウンロードする。"
 
 #. type: Plain text
 #: upstream/_guides/qute.adoc:25
-#, fuzzy
 msgid "The solution is located in the `qute-quickstart` {quickstarts-tree-url}/qute-quickstart[directory]."
 msgstr "このソリューションは `qute-quickstart` {quickstarts-tree-url}/qute-quickstart[directory] にあります。"
 
@@ -172,10 +169,8 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/qute.adoc:79
-#, fuzzy
-#| msgid "If there is no `@ResourcePath` qualifier provided, the field name is used to locate the template. In this particular case, we're injecting a template with path `templates/hello.txt`."
 msgid "If there is no `@Location` qualifier provided, the field name is used to locate the template. In this particular case, we're injecting a template with path `templates/hello.txt`."
-msgstr "`@ResourcePath` の修飾子が指定されていない場合は、フィールド名がテンプレートの場所を特定するために使用されます。この特定のケースでは、パスが `templates/hello.txt` であるテンプレートを注入しています。"
+msgstr "`@Location` 修飾子が指定されていない場合は、フィールド名がテンプレートの場所を特定するために使用されます。このケースでは、パスが `templates/hello.txt` であるテンプレートを注入しています。"
 
 #. type: Plain text
 #: upstream/_guides/qute.adoc:80
@@ -279,17 +274,13 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/qute.adoc:143
-#, fuzzy
-#| msgid "This declares a template with path `templates/HelloResource/hello.txt`."
 msgid "This declares a template with path `templates/HelloResource/hello`."
 msgstr "これは、パス `templates/HelloResource/hello.txt` でテンプレートを宣言します。"
 
 #. type: Plain text
 #: upstream/_guides/qute.adoc:144
-#, fuzzy
-#| msgid "Note that we don't trigger the rendering - this is done automatically by a special `ContainerResponseFilter` implementation."
 msgid "`Templates.hello()` returns a new template instance that is returned from the resource method. Note that we don't trigger the rendering - this is done automatically by a special `ContainerResponseFilter` implementation."
-msgstr "レンダリングをトリガーしないことに注意してください - これは特別な `ContainerResponseFilter` の実装によって自動的に行われます。"
+msgstr "`Templates.hello()` は、リソースメソッドから返される新しいテンプレートインスタンスを返します。 レンダリングをトリガーしないことに注意してください。これは、特別な `ContainerResponseFilter`実装によって自動的に行われます。"
 
 #. type: Plain text
 #: upstream/_guides/qute.adoc:146
@@ -359,10 +350,8 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/qute.adoc:192
-#, fuzzy
-#| msgid "This declares a template with path `templates/hello.txt`."
 msgid "This declares a template with path `templates/hello`."
-msgstr "これは、パス `templates/hello.txt` のテンプレートを宣言します。"
+msgstr "これは、パス `templates/hello.txt` でテンプレートを宣言します。"
 
 #. type: Title ==
 #: upstream/_guides/qute.adoc:194
@@ -839,17 +828,13 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/qute.adoc:475
-#, fuzzy
-#| msgid "In this case, we use the `@ResourcePath` qualifier to specify the template path: `templates/reports/v1/report_01.html`."
 msgid "In this case, we use the `@Location` qualifier to specify the template path: `templates/reports/v1/report_01.html`."
-msgstr "この場合、 `@ResourcePath` の修飾子を使用してテンプレートのパスを指定します: `templates/reports/v1/report_01.html` ."
+msgstr "この場合、 `@Location` 修飾子を使用してテンプレートのパスを指定します: `templates/reports/v1/report_01.html` ."
 
 #. type: Plain text
 #: upstream/_guides/qute.adoc:476
-#, fuzzy
-#| msgid "Use the `@Scheduled` annotation to instruct Quarkus to execute this method on the half hour. For more information see the link:scheduler[Scheduler] guide."
 msgid "Use the `@Scheduled` annotation to instruct Quarkus to execute this method on the half hour. For more information see the xref:scheduler.adoc[Scheduler] guide."
-msgstr "`@Scheduled` アノテーションを使用して、Quarkusにこのメソッドを30分に実行するよう指示します。詳細については、 link:scheduler[スケジューラーガイド] を参照してください。"
+msgstr "`@Scheduled` アノテーションを使用して、Quarkusにこのメソッドを30分毎に実行するよう指示します。詳細については、 link:scheduler[スケジューラーガイド] を参照してください。"
 
 #. type: Plain text
 #: upstream/_guides/qute.adoc:477
@@ -904,8 +889,6 @@ msgstr "Qute リファレンスガイド"
 
 #. type: Plain text
 #: upstream/_guides/qute.adoc:504
-#, fuzzy
-#| msgid "To learn more about Qute, please refer to the link:qute-reference[Qute reference guide]."
 msgid "To learn more about Qute, please refer to the xref:qute-reference.adoc[Qute reference guide]."
 msgstr "Qute について詳しく知りたい方は、 link:qute-reference[Qute リファレンスガイド] を参考にしてください。"
 
