--- a/l10n/po/ja_JP/_guides/amazon-ses.adoc.po
+++ b/l10n/po/ja_JP/_guides/amazon-ses.adoc.po
@@ -7,22 +7,21 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2021-11-24 10:04+0000\n"
-"PO-Revision-Date: 2021-04-25 22:47+0900\n"
+"PO-Revision-Date: 2022-02-03 10:13+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.4.2\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
 #. https://github.com/quarkusio/quarkus/tree/main/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/amazon-ses.adoc:6
-#, fuzzy, no-wrap
-#| msgid "Quarkus - Amazon SES Client"
+#, no-wrap
 msgid "Amazon SES Client"
 msgstr "Amazon SESクライアント"
 
@@ -69,10 +68,8 @@ msgstr "このガイドを完成させるには、以下が必要です:"
 
 #. type: Plain text
 #: upstream/_guides/amazon-ses.adoc:31
-#, fuzzy
-#| msgid "JDK 1.8+ installed with `JAVA_HOME` configured appropriately"
 msgid "JDK 11+ installed with `JAVA_HOME` configured appropriately"
-msgstr "JDK 1.8+ がインストールされ、 `JAVA_HOME`  が適切に設定されていること"
+msgstr "JDK 11+ がインストールされ、 `JAVA_HOME` が適切に設定されていること"
 
 #. type: Plain text
 #: upstream/_guides/amazon-ses.adoc:32
