--- a/l10n/po/ja_JP/_guides/security-jdbc.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-jdbc.adoc.po
@@ -7,14 +7,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2021-12-22 15:04+0000\n"
-"PO-Revision-Date: 2021-11-08 14:18+0900\n"
+"PO-Revision-Date: 2022-02-03 10:22+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 3.0\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
@@ -552,7 +552,6 @@ msgstr "参照"
 
 #. type: Plain text
 #: upstream/_guides/security-jdbc.adoc:315
-#, fuzzy
 #| msgid "link:security[Quarkus Security]"
 msgid "xref:security.adoc[Quarkus Security]"
-msgstr "link:security[Quarkusのセキュリティー]"
+msgstr "xref:security.adoc[Quarkus Security]"
