--- a/l10n/po/ja_JP/_guides/security-jpa.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-jpa.adoc.po
@@ -7,31 +7,28 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2021-12-22 15:04+0000\n"
-"PO-Revision-Date: 2021-04-13 23:34+0900\n"
+"PO-Revision-Date: 2022-02-03 10:22+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.4.2\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
 #. https://github.com/quarkusio/quarkus/tree/main/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/security-jpa.adoc:6
-#, fuzzy, no-wrap
-#| msgid "Quarkus - Using Security with JPA"
+#, no-wrap
 msgid "Using Security with JPA"
-msgstr "JPAでセキュリティーを使う"
+msgstr "JPAでセキュリティーを使用"
 
 #. type: Plain text
 #: upstream/_guides/security-jpa.adoc:12
-#, fuzzy
-#| msgid "This guide demonstrates how your Quarkus application can use a database to store your user identities with link:hibernate-orm[Hibernate ORM] or link:hibernate-orm-panache[Hibernate ORM with Panache]."
 msgid "This guide demonstrates how your Quarkus application can use a database to store your user identities with xref:hibernate-orm.adoc[Hibernate ORM] or xref:hibernate-orm-panache.adoc[Hibernate ORM with Panache]."
-msgstr "このガイドでは、Quarkusアプリケーションがデータベースを使用し、 link:hibernate-orm[Hibernate ORM]または link:hibernate-orm-panache[Hibernate ORM with Panache]を使用してユーザーIDを保存する方法を説明します。"
+msgstr "このガイドでは、Quarkusアプリケーションでlink:hibernate-orm[Hibernate ORM]または link:hibernate-orm-panache[Hibernate ORM with Panache]と一緒にデータベースを使用してユーザーIDを保存する方法を説明します。"
 
 #. type: Title ==
 #: upstream/_guides/security-jpa.adoc:14
@@ -56,10 +53,9 @@ msgstr "IDE"
 
 #. type: Plain text
 #: upstream/_guides/security-jpa.adoc:21
-#, fuzzy
 #| msgid "JDK 1.8+ installed with `JAVA_HOME` configured appropriately"
 msgid "JDK 11+ installed with `JAVA_HOME` configured appropriately"
-msgstr "JDK 1.8+ がインストールされ、 `JAVA_HOME`  が適切に設定されていること"
+msgstr "JDK 11+ がインストールされ、 `JAVA_HOME` が適切に設定されていること"
 
 #. type: Plain text
 #: upstream/_guides/security-jpa.adoc:22
@@ -774,7 +770,6 @@ msgstr "参照"
 
 #. type: Plain text
 #: upstream/_guides/security-jpa.adoc:420
-#, fuzzy
 #| msgid "link:security[Quarkus Security]"
 msgid "xref:security.adoc[Quarkus Security]"
-msgstr "link:security[Quarkusのセキュリティー]"
+msgstr "xref:security.adoc[Quarkus Security]"
