--- a/l10n/po/ja_JP/_guides/security-properties.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-properties.adoc.po
@@ -7,24 +7,23 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2021-12-22 15:04+0000\n"
-"PO-Revision-Date: 2021-03-06 23:44+0900\n"
+"PO-Revision-Date: 2022-02-03 10:14+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.4.2\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
 #. https://github.com/quarkusio/quarkus/tree/main/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/security-properties.adoc:6
-#, fuzzy, no-wrap
-#| msgid "Quarkus - Using Security with .properties File"
+#, no-wrap
 msgid "Using Security with .properties File"
-msgstr ".propertiesファイルでセキュリティーを使用する"
+msgstr ".propertiesファイルでセキュリティーを使用"
 
 #. type: Plain text
 #: upstream/_guides/security-properties.adoc:13
@@ -289,7 +288,6 @@ msgstr "参照"
 
 #. type: Plain text
 #: upstream/_guides/security-properties.adoc:140
-#, fuzzy
 #| msgid "link:security[Quarkus Security]"
 msgid "xref:security.adoc[Quarkus Security]"
-msgstr "link:security[Quarkus Security]"
+msgstr "xref:security.adoc[Quarkus Security]"
