--- a/l10n/po/ja_JP/_guides/status-include.adoc.po
+++ b/l10n/po/ja_JP/_guides/status-include.adoc.po
@@ -7,14 +7,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2022-01-20 16:09+0000\n"
-"PO-Revision-Date: 2021-04-11 21:07+0900\n"
+"PO-Revision-Date: 2022-02-03 10:26+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.4.2\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #. type: delimited block =
 #: upstream/_guides/status-include.adoc:4
@@ -28,10 +28,8 @@ msgstr "_experimental_ モードでは、アイデアを成熟させるために
 
 #. type: delimited block =
 #: upstream/_guides/status-include.adoc:14
-#, fuzzy
-#| msgid "In _preview_, backward compatibility and presence in the ecosystem is not guaranteed.  Specific improvements might require to change configuration or APIs and plans to become _stable_ are under way.  Feedback is welcome on our https://groups.google.com/d/forum/quarkus-dev[mailing list] or as issues in our https://github.com/quarkusio/quarkus/issues[GitHub issue tracker]."
 msgid "In _preview_, backward compatibility and presence in the ecosystem is not guaranteed.  Specific improvements might require changing configuration or APIs, and plans to become _stable_ are under way.  Feedback is welcome on our https://groups.google.com/d/forum/quarkus-dev[mailing list] or as issues in our https://github.com/quarkusio/quarkus/issues[GitHub issue tracker]."
-msgstr "_preview_ では、下位互換性やエコシステムでの存在は保証されていません。具体的な改善には設定や API の変更が必要になるかもしれませんが、 _stable_ 版になるための計画は現在進行中です。フィードバックは link:https://groups.google.com/d/forum/quarkus-dev[メーリングリスト] や link:https://github.com/quarkusio/quarkus/issues[GitHub の課題管理] で受け付けています。"
+msgstr "_preview_ では、下位互換性やエコシステムでの存在は保証されていません。具体的な改善には設定や API の変更が必要になるかもしれませんが、 _stable_ になるための計画は現在進行中です。フィードバックは link:https://groups.google.com/d/forum/quarkus-dev[メーリングリスト] や link:https://github.com/quarkusio/quarkus/issues[GitHub の課題管理] で受け付けています。"
 
 #. type: delimited block =
 #: upstream/_guides/status-include.adoc:17
@@ -40,7 +38,5 @@ msgstr "_stable_ では、下位互換性があること、エコシステムの
 
 #. type: delimited block =
 #: upstream/_guides/status-include.adoc:20
-#, fuzzy
-#| msgid "For a full list of possible extension statuses, check our https://quarkus.io/faq/#extension-status[FAQ entry]."
 msgid "For a full list of possible statuses, check our https://quarkus.io/faq/#extension-status[FAQ entry]."
-msgstr "とりうるエクステンションステータスの完全なリストについては、 link:https://quarkus.io/faq/#extension-status[FAQの項目] を参照してください。"
+msgstr "とりうるステータスの完全なリストについては、 link:https://quarkus.io/faq/#extension-status[FAQの項目] を参照してください。"
