Update .po files

--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-opentelemetry-tracer-tracing-tracer-runtime-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-opentelemetry-tracer-tracing-tracer-runtime-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-06-30 02:22+0000\n"
+"POT-Creation-Date: 2022-02-03 02:19+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -118,13 +118,14 @@ msgstr ""
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-opentelemetry-tracer-tracing-tracer-runtime-config.adoc:48
 #: upstream/_generated-config/main/config/quarkus-opentelemetry-tracer-tracing-tracer-runtime-config.adoc:59
+#: upstream/_generated-config/main/config/quarkus-opentelemetry-tracer-tracing-tracer-runtime-config.adoc:70
 #, no-wrap
 msgid "boolean"
 msgstr "boolean"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-opentelemetry-tracer-tracing-tracer-runtime-config.adoc:51
-#: upstream/_generated-config/main/config/quarkus-opentelemetry-tracer-tracing-tracer-runtime-config.adoc:61
+#: upstream/_generated-config/main/config/quarkus-opentelemetry-tracer-tracing-tracer-runtime-config.adoc:62
 #, no-wrap
 msgid "`true`"
 msgstr "`true`"
@@ -141,4 +142,24 @@ msgid ""
 " Providing a custom `io.opentelemetry.sdk.trace.samplers.Sampler` CDI Bean will ignore this setting. \n"
 " Suppressing non-application uris is enabled by default.\n"
 "--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-opentelemetry-tracer-tracing-tracer-runtime-config.adoc:69
+#, no-wrap
+msgid ""
+"[[quarkus-opentelemetry-tracer-tracing-tracer-runtime-config_quarkus.opentelemetry.tracer.include-static-resources]]`link:#quarkus-opentelemetry-tracer-tracing-tracer-runtime-config_quarkus.opentelemetry.tracer.include-static-resources[quarkus.opentelemetry.tracer.include-static-resources]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Include static resources from trace collection. \n"
+" Providing a custom `io.opentelemetry.sdk.trace.samplers.Sampler` CDI Bean will ignore this setting. \n"
+" Include static resources is disabled by default.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-opentelemetry-tracer-tracing-tracer-runtime-config.adoc:72
+#, no-wrap
+msgid "`false`"
 msgstr ""
