--- a/l10n/po/ja_JP/_guides/blaze-persistence.adoc.po
+++ b/l10n/po/ja_JP/_guides/blaze-persistence.adoc.po
@@ -7,22 +7,21 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2022-02-02 15:06+0000\n"
-"PO-Revision-Date: 2021-04-13 23:35+0900\n"
+"PO-Revision-Date: 2022-02-03 16:29+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.4.2\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
 #. https://github.com/quarkusio/quarkus/tree/main/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/blaze-persistence.adoc:6
-#, fuzzy, no-wrap
-#| msgid "Quarkus - Using Blaze-Persistence"
+#, no-wrap
 msgid "Using Blaze-Persistence"
 msgstr "Blaze-Persistenceの使用"
 
@@ -44,8 +43,6 @@ msgstr "Blaze-Persistenceのセットアップと設定"
 
 #. type: Plain text
 #: upstream/_guides/blaze-persistence.adoc:27
-#, fuzzy
-#| msgid "The extension comes with default producers for `CriteriaBuilderFactory` and `EntityViewManager` that work out of the box given a working Hibernate ORM configuration. For customization, overriding of the default producers is possible via the standard mechanism as documented in the link:cdi-reference#default_beans[Quarkus CDI reference].  This is needed if you need to set custom link:https://persistence.blazebit.com/documentation/entity-view/manual/en_US/index.html#anchor-configuration-properties[Blaze-Persistence properties]."
 msgid "The extension comes with default producers for `CriteriaBuilderFactory` and `EntityViewManager` that work out of the box given a working Hibernate ORM configuration. For customization, overriding of the default producers is possible via the standard mechanism as documented in the xref:cdi-reference.adoc#default_beans[Quarkus CDI reference].  This is needed if you need to set custom link:https://persistence.blazebit.com/documentation/entity-view/manual/en_US/index.html#anchor-configuration-properties[Blaze-Persistence properties]."
 msgstr "このエクステンションには、 `CriteriaBuilderFactory` と `EntityViewManager` のデフォルトプロデューサーが付属しており、動作する Hibernate ORM 設定があればすぐに動作します。カスタマイズのために、 link:{quarkus-home-url}/guides/cdi-reference#default_beans[Quarkus CDIリファレンス]に記載されている標準的なメカニズムを使用して、デフォルトのプロデューサーをオーバーライドすることができます。これは、カスタムの link:https://persistence.blazebit.com/documentation/entity-view/manual/en_US/index.html#anchor-configuration-properties[Blaze-Persistenceプロパティー]を設定する場合に必要です。"
 
@@ -150,10 +147,8 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/blaze-persistence.adoc:82
-#, fuzzy
-#| msgid "A `CriteriaBuilderFactory` and an `EntityViewManager` will be created based on the configured `EntityManagerFactory` as provided by the link:hibernate-orm[Hibernate-ORM extension]."
 msgid "A `CriteriaBuilderFactory` and an `EntityViewManager` will be created based on the configured `EntityManagerFactory` as provided by the xref:hibernate-orm.adoc[Hibernate-ORM extension]."
-msgstr "`CriteriaBuilderFactory` と `EntityViewManager` は、 link:{quarkus-home-url}/guides/hibernate-orm[Hibernate-ORM エクステンション]で提供される設定された `EntityManagerFactory` に基づいて作成されます。"
+msgstr "`CriteriaBuilderFactory` と `EntityViewManager` は、 link:{quarkus-home-url}/guides/hibernate-orm[Hibernate-ORM エクステンション]で提供される設定済の `EntityManagerFactory` に基づいて作成されます。"
 
 #. type: Plain text
 #: upstream/_guides/blaze-persistence.adoc:84
