--- a/l10n/po/ja_JP/_guides/security-testing.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-testing.adoc.po
@@ -7,14 +7,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2022-02-02 14:04+0000\n"
-"PO-Revision-Date: 2021-04-04 21:41+0900\n"
+"PO-Revision-Date: 2022-02-03 16:30+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.4.2\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
@@ -189,10 +189,9 @@ msgstr "参照"
 
 #. type: Plain text
 #: upstream/_guides/security-testing.adoc:105
-#, fuzzy
 #| msgid "link:security[Quarkus Security]"
 msgid "xref:security.adoc[Quarkus Security]"
-msgstr "link:security[Quarkus Security]"
+msgstr "xref:security.adoc[Quarkus Security]"
 
 #~ msgid "You can also use Wiremock to mock the authorization OAuth2 and OIDC services: See link:security-oauth2#integration-testing[OAuth2 Integration testing] for more details."
 #~ msgstr "また、Wiremockを使ってauthorization OAuth2とOIDCサービスをモックすることもできます。詳細は link:security-oauth2#integration-testing[OAuth2 統合テスト]を参照してください。"
