--- a/l10n/po/ja_JP/_posts/2022-02-02-quarkus-2-7-0-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2022-02-02-quarkus-2-7-0-final-released.adoc.po
@@ -175,7 +175,7 @@ msgstr "Mavenの場合 `-DjavaVersion=\"17\"`"
 #: upstream/_posts/2022-02-02-quarkus-2-7-0-final-released.adoc:54
 #, no-wrap
 msgid "Interactive terminal"
-msgstr "インタラクティブ端末"
+msgstr "インタラクティブターミナル"
 
 #. type: Plain text
 #: upstream/_posts/2022-02-02-quarkus-2-7-0-final-released.adoc:58
