--- a/l10n/po/ja_JP/_guides/neo4j.adoc.po
+++ b/l10n/po/ja_JP/_guides/neo4j.adoc.po
@@ -7,23 +7,23 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2021-10-27 09:03+0000\n"
-"PO-Revision-Date: 2021-07-13 17:29+0900\n"
+"PO-Revision-Date: 2022-02-03 23:31+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.4.2\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
 #. https://github.com/quarkusio/quarkus/tree/main/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/neo4j.adoc:6
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Neo4j"
-msgstr "Neo4jのセットアップ"
+msgstr "Neo4j"
 
 #. type: Plain text
 #: upstream/_guides/neo4j.adoc:15
@@ -395,9 +395,9 @@ msgstr "これでドライバーを使用する準備ができましたが、以
 
 #. type: Title ===
 #: upstream/_guides/neo4j.adoc:181
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Dev Services (Configuration Free Databases)"
-msgstr "開発サービス（コンフィグレーション・フリー・データベース"
+msgstr "開発サービス（コンフィグレーション・フリー・データベース）"
 
 #. type: Plain text
 #: upstream/_guides/neo4j.adoc:188
@@ -844,9 +844,8 @@ msgstr "Mutiny"
 
 #. type: delimited block =
 #: upstream/_guides/neo4j.adoc:443
-#, fuzzy
 msgid "The following example uses Mutiny reactive types.  If you are not familiar with Mutiny, check xref:mutiny-primer.adoc[Mutiny - an intuitive reactive programming library]."
-msgstr "以下の例では Mutiny リアクティブ型を使用します。もし慣れていない場合は、link:getting-started-reactive#mutiny[リアクティブ入門] を先にお読み下さい。"
+msgstr "次の例では、Mutinyのリアクティブ型を使用しています。もし慣れていない場合は、まず xref:mutiny-primer.adoc[Mutiny - 直感的なリアクティブプログラミングライブラリ] を読んでください。"
 
 #. type: Plain text
 #: upstream/_guides/neo4j.adoc:446
